# rainbow-filter

./: Cargo.toml  LICENSE  README.md  build.sh
docs/: index.html  styles.css
docs/assets/: rainbow_filter.js  rainbow_filter_bg.wasm  send_image.js
src/: lib.rs  shader.wgsl
