[package]
name = "rainbow-filter"
version = "0.1.0"
edition = "2021"
description = "Showcasing program of a rainbow filter powered by wgpu"
license = "MIT"
repository = "https://github.com/Mg138/rainbow-filter"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"

cfg-if = "1"
once_cell = "1.17.1"
pollster = "0.2"
bytemuck = { version = "1.13.1", features = ["derive"] }
chrono = "0.4.24"
instant = "0.1.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.15", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "ImageData"
]}
